5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1715_3061.log
== TEST (2019-05-02 16:09:41) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
r2 = int(input("digite o nome do dragao: "))
v3 = int(input("digite o nome do dragao: "))
 tipo de ataque = int(input "tipo de ataque: ")
	quantidade de unidades = int(input("quantidade de unids: "))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input "tipo de ataque: ")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:10:09) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
r2 = int(input("digite o nome do dragao: "))
v3 = int(input("digite o nome do dragao: "))
 tipo de ataque = int(input "tipo de ataque: ")
	quantidade de unidades = int(input("quantidade de unidades: "))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input "tipo de ataque: ")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:10:33) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
r2 = int(input("digite o nome do dragao: "))
v3 = int(input("digite o nome do dragao: "))
tipo de ataque = int(input "tipo de ataque: "))
quantidade de unidades = int(input("quantidade de unidades: "))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input "tipo de ataque: "))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:10:33) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
r2 = int(input("digite o nome do dragao: "))
v3 = int(input("digite o nome do dragao: "))
tipo de ataque = int(input "tipo de ataque: "))
quantidade de unidades = int(input("quantidade de unidades: "))
-- EXECUTION TIME:
0.179013
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input "tipo de ataque: "))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:10:36) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
r2 = int(input("digite o nome do dragao: "))
v3 = int(input("digite o nome do dragao: "))
tipo de ataque = int(input "tipo de ataque: "))
quantidade de unidades = int(input("quantidade de unidades: "))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input "tipo de ataque: "))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:11:25) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
r2 = int(input("digite o nome do dragao: "))
v3 = int(input("digite o nome do dragao: "))
 
	tipo de ataque = int(input "tipo de ataque: "))
 
quantidade de unidades = int(input("quantidade de unidades: "))
-- ERROR:
File "XXXX", line 5
    tipo de ataque = int(input "tipo de ataque: "))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:11:31) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
r2 = int(input("digite o nome do dragao: "))
v3 = int(input("digite o nome do dragao: "))
 
	tipo de ataque = int(input "tipo de ataque: "))
 
 quantidade de unidades = int(input("quantidade de unidades: "))
-- ERROR:
File "XXXX", line 5
    tipo de ataque = int(input "tipo de ataque: "))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:12:53) 
-- CODE:
drogon = int(input("digite o nome do dragao: "))
rhaegal = int(input("digite o nome do dragao: "))
viserion = int(input("digite o nome do dragao: "))
 
	tipo de ataque = int(input "tipo de ataque: "))
 
 quantidade de unidades = int(input("quantidade de unidades: "))
-- ERROR:
File "XXXX", line 5
    tipo de ataque = int(input "tipo de ataque: "))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:13:49) 
-- CODE:
drogon = int(input("digite o nome do dragao: "))
rhaegal = int(input("digite o nome do dragao: "))
viserion = int(input("digite o nome do dragao: "))
 int
	tipo de ataque = int(input "tipo de ataque: "))
    int
   quantidade de unidades = int(input("quantidade de unidades: "))
-- ERROR:
File "XXXX", line 4
    int
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:38) 
-- CODE:
drogon = int(input("digite o nome do dragao: "))
rhaegal = int(input("digite o nome do dragao: "))
viserion = int(input("digite o nome do dragao: "))
 int
	tipo = int(input "tipo de ataque: "))
	 int
		tipo = int (input("tipo de ataque: "))
      int
		 tipo = int(input("tipo de ataque: "))
         int() 
			quantidade = int(input("quantidade de unidades: "))
			 int
		   quantidade = int(input("quantidade de unidades: "))
			int()
			quantidade = int(input ("quantidade de unidaes: "))
			
-- ERROR:
File "XXXX", line 4
    int
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:18) 
-- CODE:
drogon = int(input("digite o nome do dragao: "))
rhaegal = int(input("digite o nome do dragao: "))
viserion = int(input("digite o nome do dragao: "))
 int
	tipo = int(input "drogon: "))
	 int
		tipo = int (input("trheagal: "))
      int
		 tipo = int(input("viserion: "))
         int() 
			quantidade = int(input("baforada: "))
			 int
		   quantidade = int(input("ataque aereo: "))
			int()
			quantidade = int(input ("maritimo: "))
			
-- ERROR:
File "XXXX", line 4
    int
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:22:50) 
-- CODE:
drogon = int(input("digite o nome do dragao: "))
rhaegal = int(input("digite o nome do dragao: "))
viserion = int(input("digite o nome do dragao: "))
 int
	tipo = int(input "drogon: "))
	 int
		tipo = int (input("trheagal: "))
      int
		 tipo = int(input("viserion: "))
         int() 
			quantidade = int(input("baforada: "))
			 int
		   quantidade = int(input("ataque aereo: "))
			int()
			quantidade = int(input ("maritimo: "))
			
-- EXECUTION TIME:
0.146745
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    int
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:44) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d1 = int(input())
ValueError: invalid literal for int() with base 10: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:58) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque
	#quantidades de unidades a serem destruidas
	
	int(else())
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:42) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:08) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:09) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:09) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:09) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:10) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.214735
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:11) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.176447
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:11) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:11) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.165291
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3061/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:11) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.226738
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3061/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:11) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:12) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.115803
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input("tipo de ataque:"))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:12) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:12) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.136875
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input("tipo de ataque:"))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:12) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:13) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.129137
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input("tipo de ataque:"))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:13) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:13) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.115717
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input("tipo de ataque:"))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:13) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:13) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:14) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.129045
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input("tipo de ataque:"))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:14) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:14) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.104541
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input("tipo de ataque:"))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:14) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:15) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.119938
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input("tipo de ataque:"))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:15) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:15) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.1172
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:15) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:16) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.148245
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input("tipo de ataque:"))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:16) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:16) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.136871
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input("tipo de ataque:"))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:16) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:17) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.110978
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:17) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:37:17) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- EXECUTION TIME:
0.110269
-- ERROR:
  File "/home/codebench/codes/1715/3061/main.py", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:29) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#e quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um desses merda: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:41) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#e quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:08) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	#Saida do tipo de ataque

	#e quantidades de unidades a serem destruidas
	
	int(input("tipo de ataque de cada um: "))
	int(input("quantidade de unidades:"))
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:06) 
-- CODE:
d1 = int(input("digite o nome do dragao: "))
d2 = int(input("digite o nome do dragao: "))
d3 = int(input("digite o nome do dragao: "))	
 tipo de ataque = int(input("tipo de ataque:"))
	quantidade = int("q: ")
-- ERROR:
File "XXXX", line 4
    tipo de ataque = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
